--- a/resources/css/styles.scss
+++ b/resources/css/styles.scss
@@ -1,3 +1,44 @@
 .group:hover .group-hover\:block {
     display: block !important;
 }
+
+.modal-mask {
+    position: fixed;
+    z-index: 9998;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 85, 184, 0.99);
+    /*background-color: rgba(164, 189, 243, 0.99);*/
+    display: table;
+    transition: opacity 0.3s ease;
+}
+.modal-wrapper {
+    display: table-cell;
+    vertical-align: middle;
+}
+.modal-container {
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    margin: 0px auto;
+    padding: 20px 10px;
+    transition: all 0.3s ease;
+}
+.modal-body {
+    width: 98%;
+    max-width: 650px;
+    margin: 10px 0;
+}
+.modal-enter {
+    opacity: 0;
+}
+.modal-leave-active {
+    opacity: 0;
+}
+.modal-enter .modal-container,
+.modal-leave-active .modal-container {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
